public/app.css
html, body {
	position: relative;
	width: 100%;
	height: 100%;
}

body {
	color: #333;
	margin: 0;
	padding: 8px;
	box-sizing: border-box;
	font-family: Ubuntu, avenir next, avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
}

main {
  margin-bottom: 8em;
}

a {
  color: #333;
  font-weight: 700;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

a:visited {
	color: #666;
}

label {
	display: block;
}

input, button, select, textarea {
	font-family: inherit;
	font-size: inherit;
	padding: 0.4em;
	margin: 0 0 0.5em 0;
	box-sizing: border-box;
	border: 1px solid #ccc;
	border-radius: 2px;
}

input:disabled {
	color: #ccc;
}

input[type="range"] {
	height: 0;
}

button, .link-button {
  color: #666;
  font-size: 1em;
  cursor: pointer;
  background-color: #fff;
  padding-top: 0.5em;
  border-radius: 1.2em;
  border-width: 2px;
  border-color: #666;
  border-style: solid;
  min-width: 44px;
  padding-bottom: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
  margin-bottom: 1em;
  pointer-events: initial;
}

button:disabled {
	color: #999;
}

button:not(:disabled):active {
	background-color: #ddd;
}

button:focus {
	border-color: #666;
}

#version-info {
  position: absolute;
  right: 1.5em;
  top: 1.5em;
  font-size: 0.5em;
  color: #666;
}

.centered-col {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#preview-stage {
  position: relative;
  width: 256px;
  height: 256px;
  border-radius: 22%;
  background: linear-gradient(to bottom, hsl(211, 25%, 60%) 30%, hsl(211, 25%, 40%) 100%);
  margin-bottom: 1em;
}

#alt-bg-overlay {
  background: url(squared-emoji-blank.png);
  background-size: contain;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  pointer-events: none;
  opacity: .3;
}

.hidden {
  display: none;
  visibility: hidden;
}

.inner-shine {
  margin-left: 5%;
  margin-top: 5%;
  border-radius: 20%;
  width: 90%;
  height: 90%;
  background: linear-gradient(to bottom, hsla(207.8, 61.4%, 82.7%, 0.77) 0%, hsla(0, 0%, 0%, 0) 30%);
  justify-content: center;
}

#emoji-text {
  text-align: center;
  text-transform: uppercase;
  color: transparent;
  font-size: 10em;
  font-family: "Avenir Next Condensed", "Helvetica Neue", Ubuntu, sans-serif;
  font-weight: bold;
  line-height: 100%;
  text-shadow:
  0.01em 0.01em 0.02em #000,
  0 0 0 rgba(255, 255, 255, 0.75);
  filter: invert(1);
}

.result {
  margin-top: 2em;
}

.result img {
  margin-bottom: .25rem;
}

#result-image {
  width: 256px;
  height: 256px;
}

#preview-stage {
  overflow: hidden;
}

.form, .preview {
  width: 90%;
  max-width: 500px;
  text-align: center;
  margin:0 auto;
}

.form ul {
  list-style-type: none;
  margin:0;
  padding:0;
}

.font-size-subform {
  display: flex;
  align-items: center;
}

#font-size-slider {
  margin-bottom: 0;
  width: 100%;
  height: 2rem;
}

#font-size-label {
  margin-left: 0.5em;
}

.alt-bg-opacity-subform {
  display: flex;
  align-items: center;
}

#alt-bg-opacity-slider {
  margin-bottom: 0;
  width: 100%;
  height: 2rem;
}

#alt-bg-opacity-label {
  margin-left: 0.5em;
}

.radlab, .radlab label {
  display: inline-block;
}

.radlab {
  margin: 0 2%;
}

#result-instruction {
  margin-top: 1em;
}

.preview-helpers {
  display: flex;
  flex-wrap: wrap;
}

.preview-helpers h3 {
  flex: 0 0 100%;
  text-align: center;
}

.preview-helpers > div {
  width: 45%;
  padding: 1rem 2%;
  text-align: center;
}

.preview-light {
  background-color: #F0F0F0;
  /* Round top left and bottom left. */
  border-radius: 0.25rem 0 0 0.25rem;
}

.preview-dark {
  background-color: #060606;
  /* Round top right and bottom right. */
  border-radius: 0 0.25rem 0.25rem 0;
}

footer {
  text-align: center;
  margin-bottom: 4rem;
}

